Fixed spacing between each statistic

--- a/src/styles/components/Statistics.css
+++ b/src/styles/components/Statistics.css
@@ -8,6 +8,10 @@
     max-width: 240px;
 }
 
+#StatisticThree {
+    max-width: 170px;
+}
+
 .StatisticSubText {
     font-size: 18px;
     color: #434343;
